# actenon-kernel

./: .gitignore  ARCHITECTURE.md  AUDIT_RESPONSES.md  CATEGORY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_MAPPING.md  CONFORMANCE.md  CONTRIBUTING.md  CROSS_REPO_WIRE_CONTRACTS.md  FINDINGS.md  GOVERNANCE.md  INTEGRATIONS.md  KERNEL_GUARANTEES.md  LICENSE  MCP_HERO_PATH.md  MULTI_AGENT_EXECUTION_MODEL.md  Makefile  QUICKSTART.md  README.md  SDK_SELECTION_GUIDE.md  SECURITY.md  SPEC_INDEX.md  THE_EXECUTION_GAP.md  THREAT_MODEL.md  TRACE_VIEWER.md  VERSIONING.md  VERSIONING_POLICY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  conformance-release.yml  invariants.yml  link-check.yml  protocol-drift.yml  supply-chain.yml
actenon/: __init__.py  cli.py  coverage_matrix.py  execution_graph.py  gate.py  idempotency.py  local_runtime.py  local_runtime_server.py  outcomes.py  scanner.py  scanner_capability_registry.v1.json
actenon/adapters/: __init__.py  _authorization.py  base.py  edge.py  fastapi.py  langchain.py  mcp.py
actenon/anchors/: __init__.py  local_log.py  models.py
actenon/api/: __init__.py  intake.py  invoice_payment.py  refund.py
actenon/boundary/: __init__.py
actenon/conformance/: __init__.py  helpers.py  manifest.py  test_artifact_shape_conformance.py  test_canonicalization_strict_conformance.py  test_countersignature_conformance.py  test_execution_state_conformance.py  test_outcome_attestation_conformance.py  test_replay_conformance.py  test_transparency_log_conformance.py  test_trust_artifacts_conformance.py  test_verifier_sdk_conformance.py  version.py
actenon/core/: __init__.py  errors.py  json.py  kernel.py  redaction.py
actenon/credentials/: __init__.py  broker.py
actenon/demo/: __init__.py  local_proof.py  portable_local_proof.py
actenon/escrow/: __init__.py  base.py  memory.py  service.py  sqlite.py
actenon/evidence/: __init__.py  query.py  stores.py
actenon/execution/: __init__.py  mode_aware.py  protected_executor.py
actenon/models/: __init__.py  contracts.py  evidence.py  execution.py  intent_record.py  invoice_payment.py  policy_bundle.py  runtime.py  serialization.py
actenon/policy/: __init__.py  engine.py  evidence.py  invoice_payment.py  refund.py
actenon/preflight/: __init__.py  engine.py  evidence.py  models.py  policy_packs.py
actenon/proof/: __init__.py  audit.py  canonical.py  local.py  refusal_messages.py  service.py  signing.py
actenon/receipts/: __init__.py  attestation.py  factory.py  invoice_payment.py  refund.py  store.py  writers.py
actenon/reconciliation/: __init__.py  base.py
benchmarks/: verify_benchmark.py
conformance/: CHANGELOG.md  MATRIX.md  README.md  __init__.py  suite.json  vector-lock.json
docs/: ACCEPTANCE_CRITERIA.md  ADOPTION_DECISION_RECORD_TEMPLATE.md  ARCHITECTURE.md  CATEGORY.md  CONFORMANCE.md  DEMO_SCRIPT.md  EXECUTION_GAP_SCANNER.md  FAILURE_MODES.md  INCIDENT_ANALYSIS_TEMPLATE.md  OPEN_SOURCE_BOUNDARY.md  PRODUCTION_INTEGRATION.md  PUBLIC_REPO_BOUNDARY.md  README.md  REVOCATION_AND_RECEIPT_DURABILITY.md  SCOPE_AND_GUARANTEES.md  SDK_SELECTION_GUIDE.md  SECURITY_ASSURANCE.md  SPEC_INDEX.md  SUPPORT_AND_COMPATIBILITY_STATUS.md  TASK_LOOP.md  TEST_PLAN.md  THE_EXECUTION_GAP.md  TRACE_VIEWER.md  VERSIONING_POLICY.md  VISION.md
examples/: __init__.py  adversarial_rsa_policy_stress_test.py  integration_support.py  interactive_execution_demo.py  quickstart_min.py
schemas/: __init__.py  action_intent.v1.json  approval_artifact.v1.json  issuer_status.v1.json  pccb.v1.json  receipt.v1.json  receipt_attestation.v2alpha1.json  receipt_countersignature.v1.json  refusal.v1.json  refusal_attestation.v2alpha1.json  transparency_checkpoint.v1.json  transparency_consistency_proof.v1.json  transparency_inclusion_proof.v1.json
scripts/: assert_dep_direction.py  build_conformance_release.py  build_portable_distribution.sh  create_public_release_archive.sh  create_release_archive.sh  demo_fintech.sh  demo_hero.sh  first_run.sh  judge.sh  public_hygiene_audit.py  public_repo_verify.sh  rename_cli_in_docs.py  reset_demo_state.sh  run_critical_domain_eval.sh  run_local_proof.sh  test_replay_store_unreachable.py  update_conformance_vector_lock.py  validate_public_boundary.sh  validate_release_archive.sh  verify.sh  verify_conformance_manifest.py  verify_portable_distribution.sh  verify_readme_quickstart.sh  verify_release_gate.sh  verify_scope_claims.py  verify_sdk_conformance.sh
sdk/go/: README.md  (+1 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: canonical.rs  countersignature.rs  errors.rs  lib.rs  signers.rs  transparency.rs  trust_artifacts.rs  types.rs  verifier.rs
sdk/rust/tests/: countersignature_test.rs  transparency_test.rs  trust_artifacts_test.rs  verifier_conformance_test.rs  verifier_test.rs
tests/: __init__.py  test_adversarial_rsa_policy_stress_test.py  test_cloud_optional.py  test_dx_adoption_fixes.py  test_independence.py  test_interactive_execution_demo.py  test_neutrality.py  test_protocol_drift.py  test_verification_independence.py
tools/: rewrite_readme_best_in_class.py
(+461 files in other folders)
