[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actenon-kernel"
version = "0.1.0"
description = "Open proof-required execution kernel for consequential actions."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ross Buckley" }]
keywords = ["execution", "proof", "verification", "policy", "receipts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
asymmetric = ["cryptography>=42"]
dev = ["build"]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
actenon = "actenon.cli:main"
actenon-local-proof = "actenon.demo.local_proof:main"
actenon-portable-local-proof = "actenon.demo.portable_local_proof:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["actenon*", "examples*", "schemas*"]

[tool.setuptools.package-data]
"actenon.ui.trace_viewer" = ["static/*"]
"schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["actenon", "tests"]
norecursedirs = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "AI Agent Execution Control Layer",
  "__pycache__",
  "build",
  "dist",
]
