[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actenon-kernel"
version = "0.1.0"
description = "Open proof-required execution kernel for consequential actions."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ross Buckley" }]
keywords = ["execution", "proof", "verification", "policy", "receipts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
asymmetric = ["cryptography>=42"]
dev = ["build"]
fastapi = ["fastapi>=0.115,<1"]
langchain = ["langchain-core>=0.3,<2"]
mcp = ["mcp>=1.9,<2"]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
actenon = "actenon.cli:main"
actenon-local-proof = "actenon.demo.local_proof:main"
actenon-portable-local-proof = "actenon.demo.portable_local_proof:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["actenon*", "conformance*", "examples*", "schemas*"]

[tool.setuptools.package-data]
"actenon.conformance" = ["vectors/verifier_sdk_v1/*"]
"conformance" = [
  "CHANGELOG.md",
  "MATRIX.md",
  "README.md",
  "VERSION",
  "suite.json",
  "vector-lock.json",
  "vectors/*/*.json",
  "vectors/*/README.md",
  "vectors/*/mutations/*.json",
]
"actenon.ui.trace_viewer" = ["static/*"]
"schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["actenon", "tests"]
norecursedirs = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "AI Agent Execution Control Layer",
  "__pycache__",
  "build",
  "dist",
]
