[package]
name = "actenon-verifier-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "Minimal verifier-edge SDK for the Actenon Kernel protected-endpoint path."

[lib]
name = "actenon_verifier_sdk"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
# Keep the Rust 1.81 MSRV resolvable through ed25519's optional PKCS#8 graph.
base64ct = "=1.6.0"
ed25519-dalek = "=2.1.1"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "=0.3.36", features = ["formatting", "parsing"] }
