[package]
name = "actenon-verifier-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "Minimal verifier-edge SDK for the Actenon Kernel protected-endpoint path."

[lib]
name = "actenon_verifier_sdk"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
# Keep the verifier's ed25519/PKCS#8 dependency graph deterministic.
base64ct = "=1.6.0"
ed25519-dalek = "=2.1.1"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "=0.3.47", features = ["formatting", "parsing"] }
